added few lines in yaml file

--- a/my folder/test.yaml
+++ b/my folder/test.yaml
@@ -1,10 +1,12 @@
 ---
-- name 
-  hosts:all
+- name:
+  host:all
   vars:
-   
-  tasks
+  vars_int:dasf
+  tasks:
 
-- name
+- name:
+  host:all
+  tasks:
   
 ---
